# draven

./: .gitignore  Anchor.toml  Cargo.toml  PRIVACY.md  README.md  package.json
app/: index.html  package.json  tailwind.config.js  vite.config.ts
app/src/: App.tsx  index.css  main.tsx  polyfills.ts  vite-env.d.ts
app/src/components/: Background.tsx  LandingPage.tsx  Layout.tsx  LiquidationWatchdog.tsx  MpcComputingState.tsx  PrivacyProofPanel.tsx  Skeleton.tsx  TierBadge.tsx
app/src/hooks/: useBorrower.ts  usePool.ts
app/src/pages/: Borrow.tsx  Lend.tsx  Portfolio.tsx
app/src/types/: index.ts
app/src/utils/: anchor.ts  arcium.ts
encrypted-ixs/: Cargo.toml
encrypted-ixs/src/: lib.rs
patches/: @arcium-hq+client+0.9.6.patch
programs/draven/: Cargo.toml
programs/draven/src/: lib.rs
scripts/: finalize-circuits.mjs  fund-wallet.mjs  init-comp-defs.mjs  init-pool.mjs  test-e2e.ts  upload-circuits.mjs  verify-onchain.js
