[package]
name = "draven"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "draven"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang    = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl     = { version = "0.32.1", features = ["token", "associated_token"] }
arcium-anchor  = "=0.9.6"
arcium-macros  = "=0.9.6"
arcium-client  = "=0.9.6"
getrandom      = { version = "=0.2.15", features = ["custom"] }
